<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGreen"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_button"
        android:background="@color/transparent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/login_pita" />


    <EditText
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:ems="20"
        android:hint="@string/email_hint"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColorHint="#36020202"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="20"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColorHint="#36020202"
        android:textSize="20sp" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="checkInput"
        android:layout_marginTop="30dp"
        android:background="@drawable/full_button"
        android:textColor="@color/off_white"
        android:layout_above="@id/register_link"
        android:text="@string/login_button_text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/register_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_button"
        android:onClick="register"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button"
        tools:layout_editor_absoluteX="30dp"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>