<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/clock_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/varela_round"
        android:padding="6dp"
        android:text="@string/new_order_dialog_title"
        android:textColor="@color/textGreen"
        android:textDirection="rtl"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TimePicker
        android:id="@+id/timepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/off_white"
        android:backgroundTint="@color/backgroundWhite"
        android:headerBackground="@color/textGreen"
        android:numbersBackgroundColor="@color/backgroundWhite"
        android:numbersInnerTextColor="@color/textGreen"
        android:numbersSelectorColor="@color/textGreen"
        android:numbersTextColor="@color/textGreen"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clock_header_text" />

    <TextView
        android:id="@+id/clock_info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/varela_round"
        android:padding="6dp"
        android:text="@string/time_pick_instructions"
        android:textColor="@color/textGreen"
        android:textDirection="rtl"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timepicker" />

    <TextView
        android:id="@+id/opening_hours_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/varela_round"
        android:padding="6dp"
        android:text="@string/order_hours_instruction"
        android:textColor="@color/textGreen"
        android:textDirection="rtl"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clock_info_text" />

    <TextView
        android:id="@+id/order_time_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/varela_round"
        android:padding="6dp"
        android:text="@string/order_interval_instruction"
        android:textColor="@color/red"
        android:textDirection="rtl"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opening_hours_text" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/border_button"
        android:clickable="false"
        android:fontFamily="@font/varela_round"
        android:text="שגר"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/order_time_error_text" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:background="@drawable/border_button"
        android:fontFamily="@font/varela_round"
        android:text="שכח"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ok_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_time_error_text"
        app:layout_constraintTop_toTopOf="@+id/ok_button" />


</androidx.constraintlayout.widget.ConstraintLayout>