<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/backgroundWhite"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/register_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/register_button">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/login_pita" />

            <EditText
                android:id="@+id/username_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginEnd="34dp"
                android:layout_marginBottom="10dp"
                android:ems="20"
                android:hint="@string/username_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColorHint="@color/loginHintColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginEnd="34dp"
                android:layout_marginBottom="10dp"
                android:ems="20"
                android:hint="@string/email_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColorHint="#36020202"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginEnd="34dp"
                android:layout_marginBottom="30dp"
                android:ems="20"
                android:hint="@string/password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textAlignment="center"
                android:textColorHint="#36020202"
                android:textSize="20sp" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:background="@drawable/full_button"
        android:fontFamily="@font/varela_round"
        android:onClick="checkInput"
        android:text="הירשם"
        android:textColor="@color/off_white"
        android:textSize="20sp" />

</RelativeLayout>