<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundWhite"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/welcome_str"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bag"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="5dp"
        android:onClick="launchMyBagDialog"
        android:src="@drawable/bag"
        app:layout_constraintBottom_toBottomOf="@+id/greeting"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/greeting"

        />

    <TextView
        android:id="@+id/bag_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_order_str"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/bag"
        app:layout_constraintRight_toRightOf="@id/bag"
        app:layout_constraintTop_toBottomOf="@id/bag" />

    <TextView
        android:id="@+id/active_orders_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="הזמנות פעילות"
        app:layout_constraintBottom_toTopOf="@id/line"
        app:layout_constraintRight_toRightOf="@id/greeting" />


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bag_text" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orders_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:scrollbarSize="1dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarThumbHorizontal="@color/dark_navy"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <TextView
        android:id="@+id/be_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="@string/be_first"
        android:textDirection="rtl"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="openNewOrderDialog"
        android:scaleType="center"
        app:backgroundTint="@color/textGreen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:maxImageSize="48dp"
        app:srcCompat="@drawable/add_plus"

        />


</androidx.constraintlayout.widget.ConstraintLayout>

